--- a/xCAT-server/share/xcat/install/pkvm/compute.pkvm3.ppc64le.tmpl
+++ b/xCAT-server/share/xcat/install/pkvm/compute.pkvm3.ppc64le.tmpl
@@ -25,13 +25,24 @@ timezone --utc "#TABLE:site:key=timezone:value#"
 #
 rootpw --iscrypted #CRYPT:passwd:key=system,username=root:password#
 
-#partition / --ondisk=/dev/mapper/ibmpkvm_vg_root-ibmpkvm_lv_root
-part PV.01 --ondisk=/dev/sda
-volgroup ibmpkvm_rootvg PV.01
-#logvol / --vgname=VOLGROUP_NAME --noformat
-#partition / --ondisk=/dev/sda
 #the --devicename must specify right now, but without network command, it can also work, so we delete it.
 #network --bootproto dhcp
+
+
+
+#XCAT_PARTITION_START#
+%include /tmp/partitioning
+#XCAT_PARTITION_END#
+
+%pre
+{
+set -x
+touch "/startpre"
+#add the code to determine the disk to partition here
+#default is /dev/sda
+#INCLUDE:#ENV:XCATROOT#/share/xcat/install/scripts/pre.pkvm3#
+} >>/tmp/prelog 2>&1
+%end
 
 %post
 touch "/startpost"
