--- a/xCAT-server/share/xcat/install/ubuntu/compute.tmpl
+++ b/xCAT-server/share/xcat/install/ubuntu/compute.tmpl
@@ -51,61 +51,7 @@ d-i partman-md/device_remove_md boolean true
 
 #create the /tmp/partitionfile based on the uefi or legacy bios 
 d-i partman/early_command string \
-    set -x; \
-    if [ -f /tmp/boot_disk ]; then \
-       debconf-set partman-auto/disk "$(cat /tmp/boot_disk)"; \
-       exit; \
-    fi; \
-    rm /tmp/devs-with-boot 2>/dev/null || true; \
-    for d in $(list-devices partition); do \
-        mkdir -p /tmp/mymount; \
-        rc=0; \
-        mount $d /tmp/mymount || rc=$?; \
-        if [[ $rc -eq 0 ]]; then \
-            [[ -d /tmp/mymount/boot ]] && echo $d >>/tmp/devs-with-boot; \
-            for i in /tmp/mymount/vmlinuz* ; do \
-                if [ -e $i ]; then \
-                    echo $d >>/tmp/devs-with-boot; break; \
-                fi; \
-            done; \
-            umount /tmp/mymount; \
-        fi; \
-    done; \
-    if [[ -e /tmp/devs-with-boot ]]; then \
-        head -n1 /tmp/devs-with-boot | egrep  -o '\S+[^0-9]' > /tmp/boot_disk; \
-        rm /tmp/devs-with-boot 2>/dev/null || true; \
-    else \
-        if [[ -e /tmp/disk_info ]]; then \
-            rm -f /tmp/disk_info; \
-        fi; \
-        for disk in $(list-devices disk); do \
-            diskbootable=''; \
-            currdriver=`udevadm info -a -n $disk |grep DRIVERS|grep -v '""'|grep -v '"sd"'|head -n 1|sed -e 's/[^"]*"//' -e 's/"//'`; \
-            case "$currdriver" in \
-            "ata_piix4"|"PMC MaxRAID"|"ahci"|"megaraid_sas") \
-                diskbootable=$disk; \
-            ;; \
-            "mptsas"|"mpt2sas"|"mpt3sas") \
-                diskbootable=$disk; \
-            ;; \
-            *) \
-                diskbootable=''; \
-            ;; \
-            esac; \
-            if [ ! -z "$diskbootable" ]; then \
-                devpath=`udevadm info $diskbootable | grep DEVPATH`; \
-                echo $devpath ." $diskbootable" >> /tmp/disk_info; \
-            fi; \
-        done; \
-        if [[ -e /tmp/disk_info ]]; then \
-            DEV=`cat /tmp/disk_info | sort -t : -k 1 -k 2 -k 3 -k 4 -k 5 -k 6 -k 7 -k 8 -g | head -n1 | egrep -o '/dev/[s|h|v]d.*$'`; \
-        fi; \
-        if [[ "$DEV" == "" ]]; then \
-            DEV="/dev/sda"; \
-        fi; \
-        echo "$DEV" > /tmp/boot_disk; \
-    fi; \
-    debconf-set partman-auto/disk "$(cat /tmp/boot_disk)"
+    debconf-set partman-auto/disk "$(cat /tmp/install_disk)"
 d-i partman-auto/expert_recipe_file string /tmp/partitionfile
 
 # This makes partman automatically partition without confirmation, provided
