--- a/xCAT-server/share/xcat/mypostscript/mypostscript.tmpl
+++ b/xCAT-server/share/xcat/mypostscript/mypostscript.tmpl
@@ -130,6 +130,9 @@ export NICNETWORKS
 NICEXTRAPARAMS=#TABLE:nics:$NODE:nicextraparams#
 export NICEXTRAPARAMS
 
+NICDEVICES=#TABLE:nics:$NODE:nicdevices#
+export NICDEVICES
+
 CFGMGR=#TABLE:cfgmgt:$NODE:cfgmgr#
 export CFGMGR
 
