cover rh6.7 for post.xcat restructure

--- a/xCAT-server/share/xcat/install/rh/compute.rhels6.ppc64.tmpl
+++ b/xCAT-server/share/xcat/install/rh/compute.rhels6.ppc64.tmpl
@@ -148,4 +148,7 @@ reboot
 %pre
 #INCLUDE:#ENV:XCATROOT#/share/xcat/install/scripts/pre.rh#
 %post
+mkdir -p /var/log/xcat/
+{
 #INCLUDE:#ENV:XCATROOT#/share/xcat/install/scripts/post.rh#
+} >>/var/log/xcat/xcat.log 2>&1
