--- a/xCAT-server/share/xcat/install/rh/compute.rhels6.x86_64.tmpl
+++ b/xCAT-server/share/xcat/install/rh/compute.rhels6.x86_64.tmpl
@@ -151,5 +151,8 @@ reboot
 %pre
 #INCLUDE:#ENV:XCATROOT#/share/xcat/install/scripts/pre.rh#
 %post
+mkdir -p /var/log/xcat/
+{
 #INCLUDE:#ENV:XCATROOT#/share/xcat/install/scripts/post.rh#
+} >>/var/log/xcat/xcat.log 2>&1
 
