To fix issue #761, made a mistake that make certificate generate failed

--- a/xCAT-server/share/xcat/ca/openssl.cnf.tmpl
+++ b/xCAT-server/share/xcat/ca/openssl.cnf.tmpl
@@ -226,7 +226,7 @@ basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 
 [ san_env ]
-subjectAltaName = ${ENV::SAN}
+subjectAltName = ${ENV::SAN}
 
 [ v3_ca ]
 
