--- a/xCAT-server/share/xcat/ca/openssl.cnf.tmpl
+++ b/xCAT-server/share/xcat/ca/openssl.cnf.tmpl
@@ -226,7 +226,10 @@ basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 
 [ san_env ]
-subjectAltName = ${ENV::SAN}
+subjectAltName = @alt_names
+
+[ alt_names ]
+#XCATCASAN#
 
 [ v3_ca ]
 
