--- a/xCAT-server/share/xcat/install/ubuntu/compute.tmpl
+++ b/xCAT-server/share/xcat/install/ubuntu/compute.tmpl
@@ -51,8 +51,10 @@ d-i partman-md/device_remove_md boolean true
 
 #create the /tmp/partitionfile based on the uefi or legacy bios 
 d-i partman/early_command string \
+{ \
 #INCLUDE_GET_FIRST_DISK_SCRIPT#  \
-    debconf-set partman-auto/disk "$(cat /tmp/install_disk)"
+    debconf-set partman-auto/disk "$(cat /tmp/install_disk)"; \
+} >>/tmp/pre-install.log 2>&1
 d-i partman-auto/expert_recipe_file string /tmp/partitionfile
 
 # This makes partman automatically partition without confirmation, provided
