Add node attribute 'syslog', avoid the syslog configuration for certain node

--- a/xCAT-server/share/xcat/mypostscript/mypostscript.tmpl
+++ b/xCAT-server/share/xcat/mypostscript/mypostscript.tmpl
@@ -44,6 +44,9 @@ export PRIMARYNIC
 MASTER=#TABLE:noderes:$NODE:xcatmaster#
 export MASTER
 
+SYSLOG=#TABLE:noderes:$NODE:syslog#
+export SYSLOG
+
 NODEROUTENAMES=#TABLE:noderes:$NODE:routenames#
 export NODEROUTENAMES
 
