--- a/xCAT-server/share/xcat/install/pkvm/compute.pkvm3.ppc64le.tmpl
+++ b/xCAT-server/share/xcat/install/pkvm/compute.pkvm3.ppc64le.tmpl
@@ -36,22 +36,25 @@ rootpw --iscrypted #CRYPT:passwd:key=system,username=root:password#
 
 %pre
 {
-set -x
+echo "Running Automated Network Pre-Installation script..."
 touch "/startpre"
 #add the code to determine the disk to partition here
 #default is /dev/sda
 #INCLUDE:#ENV:XCATROOT#/share/xcat/install/scripts/pre.pkvm3#
-} >>/tmp/prelog 2>&1
+} >>/tmp/pre-install.log 2>&1
 %end
 
 %post
+mkdir -p /var/log/xcat/
+{
+cat >> /var/log/xcat/xcat.log << "EOF"
+%include /tmp/pre-install.log
+EOF
+echo "Running Automated Network Post-Installation script..."
 touch "/startpost"
-
 #INCLUDE:#ENV:XCATROOT#/share/xcat/install/scripts/post.xcat#
 touch "/inpost"
-
 #sleep 1000000
-
-
+} >>/var/log/xcat/xcat.log 2>&1
 %end
 
