--- a/xCAT-server/share/xcat/install/ubuntu/compute.tmpl
+++ b/xCAT-server/share/xcat/install/ubuntu/compute.tmpl
@@ -52,8 +52,8 @@ d-i partman-md/device_remove_md boolean true
 #create the /tmp/partitionfile based on the uefi or legacy bios 
 d-i partman/early_command string \
 { \
-#INCLUDE_GET_FIRST_DISK_SCRIPT#  \
-    debconf-set partman-auto/disk "$(cat /tmp/install_disk)"; \
+#INCLUDE_GET_INSTALL_DISK_SCRIPT#  \
+    debconf-set partman-auto/disk "$(cat /tmp/xcat.install_disk)"; \
 } >>/tmp/pre-install.log 2>&1
 d-i partman-auto/expert_recipe_file string /tmp/partitionfile
 
