fix issue  [Customer] bootloader is not grabbing the addkcmdline from osimage #1185

--- a/xCAT-server/share/xcat/install/centos/kvm.centos6.tmpl
+++ b/xCAT-server/share/xcat/install/centos/kvm.centos6.tmpl
@@ -31,7 +31,7 @@ clearpart --all --initlabel
 #No RAID
 #/boot really significant for this sort of setup nowadays?
 #part /boot --size 50 --fstype ext3
-%include /tmp/partitioning
+%include /tmp/partitionfile
 #XCAT_PARTITION_END#
 
 #RAID 0 /scr for performance
