--- a/xCAT-server/share/xcat/install/pkvm/compute.pkvm3.ppc64le.tmpl
+++ b/xCAT-server/share/xcat/install/pkvm/compute.pkvm3.ppc64le.tmpl
@@ -31,7 +31,7 @@ rootpw --iscrypted #CRYPT:passwd:key=system,username=root:password#
 
 
 #XCAT_PARTITION_START#
-%include /tmp/partitioning
+%include /tmp/partitionfile
 #XCAT_PARTITION_END#
 
 %pre
