--- a/xCAT-server/share/xcat/install/rh/compute.rhels6.x86_64.tmpl
+++ b/xCAT-server/share/xcat/install/rh/compute.rhels6.x86_64.tmpl
@@ -37,7 +37,7 @@ key --skip
 #No RAID
 #/boot really significant for this sort of setup nowadays?
 #part /boot --size 50 --fstype ext3
-%include /tmp/partitioning
+%include /tmp/partitionfile
 #XCAT_PARTITION_END#
 
 #RAID 0 /scr for performance
