--- a/xCAT-server/share/xcat/install/rh/kvm.rhels6.tmpl
+++ b/xCAT-server/share/xcat/install/rh/kvm.rhels6.tmpl
@@ -35,7 +35,7 @@ key --skip
 #No RAID
 #/boot really significant for this sort of setup nowadays?
 #part /boot --size 50 --fstype ext3
-%include /tmp/partitioning
+%include /tmp/partitionfile
 #part swap --size 1024 
 #part / --size 1 --grow --fstype ext4
 #XCAT_PARTITION_END#
