--- a/xCAT-server/share/xcat/install/rh/kvm.rhels7.tmpl
+++ b/xCAT-server/share/xcat/install/rh/kvm.rhels7.tmpl
@@ -34,7 +34,7 @@ clearpart --all --initlabel
 #No RAID
 #/boot really significant for this sort of setup nowadays?
 #part /boot --size 50 --fstype ext3
-%include /tmp/partitioning
+%include /tmp/partitionfile
 #part swap --size 1024 
 #part / --size 1 --grow --fstype ext4
 #XCAT_PARTITION_END#
